--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,9 @@ layout: page
 ---
 
 <div class="me">
-  <div class="me-image"></div>
+  <div class="me-image">
+    <img src="{{ "/images/me-2021.jpg" | url }}">
+  </div>
   <p>
     Hello, my name is Andreas Mausch, I am a software developer from
     <span class="location">
