--- a/styles/_table.scss
+++ b/styles/_table.scss
@@ -22,8 +22,8 @@ table tr:hover {
 }
 
 table th {
-  background-color: #459721;
-  color: #fff;
+  background-color: #fff;
+  color: rgb(255, 135, 0);
   padding-bottom: 12px;
   padding-top: 12px;
   text-align: left;
