--- a/styles/style.scss
+++ b/styles/style.scss
@@ -153,7 +153,7 @@ a {
 .postlist {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 28px;
   margin: 0;
   padding-left: 0;
 }
@@ -161,7 +161,8 @@ a {
 .postlist-item {
   display: flex;
   flex-direction: column;
-  gap: 6px;
+  gap: 4px;
+  line-height: 1;
   list-style-type: none;
   margin: 0;
 }
@@ -178,7 +179,7 @@ a {
 }
 
 .postlist-item-thumbnail {
-  margin-right: 30px;
+  margin: 0 auto;
   max-height: 120px;
   width: 120px;
 }
@@ -192,7 +193,7 @@ a {
   flex-grow: 1;
 }
 
-.postlist-link {
+.postlist-title {
   font-size: 14pt;
 }
 
