--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<h1>Blog post: {{ title | safe }}</h1>
+<h1>{{ title | safe }}</h1>
 <div>
   <time class="postlist-date" datetime="{{ date | isoDateTime }}">{{ date | date }}</time>
 </div>
