Fix css class name conflict with prism-markdown-it ".token .content"

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -63,7 +63,7 @@ li {
   line-height: 2;
 }
 
-.content {
+body > .content {
   background-color: $content-background-color;
   padding: 16px 8px;
 }
