--- a/styles/style.scss
+++ b/styles/style.scss
@@ -256,7 +256,7 @@ kbd {
 }
 
 blockquote {
-  background: #ccc;
+  background-color: $background-color;
   border-radius: 0.5em;
   font-family: Lucida Sans Typewriter, Lucida Console, monaco, Bitstream Vera Sans Mono, monospace;
   font-size: 11pt;
