Add copy to clipboard button

--- a/styles/_code-theme.scss
+++ b/styles/_code-theme.scss
@@ -8,6 +8,7 @@ pre[class*="language-"] {
   background: none;
   color: #000;
   font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace;
+  font-size: 9pt;
   hyphens: none;
   line-height: 1.5;
   tab-size: 4;
