Show checkmark as confirmation on successful copy-to-clipboard

--- a/styles/_code.scss
+++ b/styles/_code.scss
@@ -37,3 +37,7 @@ code[class*="language-"] .highlight-line::before {
   right: 0.5em;
   top: 0.5em;
 }
+
+pre[class*="language-"] i.icon-check {
+  color: #2a7ae2;
+}
