Filter posts by tag

--- a/blog.njk
+++ b/blog.njk
@@ -1,23 +1,5 @@
 ---
-layout: page
+layout: post-list
 navigationWeight: 3
 title: Blog
 ---
-
-<div class="home">
-  <ol reversed class="postlist">
-    {% for post in collections.posts | reverse %}
-      <li class="postlist-item">
-        <a href="{{ post.url | url }}">
-          <div class="postlist-item-thumbnail">
-            {% postThumbnail post %}
-          </div>
-        </a>
-        <div class="postlist-item-content">
-          <a href="{{ post.url | url }}" class="postlist-title">{{ post.data.title }}</a>
-          <time class="postlist-date" datetime="{{ post.date | isoDateTime }}">{{ post.date | date }}</time>
-        </div>
-      </li>
-    {% endfor %}
-  </ol>
-</div>
