--- a/styles/style.scss
+++ b/styles/style.scss
@@ -179,6 +179,16 @@ a {
   font-size: 87.5%;
 }
 
+.tags {
+  font-size: 87.5%;
+  list-style: none;
+  margin: 0;
+}
+
+.tags li {
+  display: inline;
+}
+
 .postlist-item-thumbnail {
   margin: 0 auto;
   max-height: 120px;
