--- a/styles/_code-theme.scss
+++ b/styles/_code-theme.scss
@@ -55,9 +55,12 @@ pre[class*="language-"] {
 .token.property,
 .token.tag,
 .token.constant,
-.token.symbol,
-.token.deleted {
+.token.symbol {
   color: $secondary-color;
+}
+
+.token.deleted {
+  color: #f00;
 }
 
 .token.boolean,
@@ -69,9 +72,12 @@ pre[class*="language-"] {
 .token.attr-name,
 .token.string,
 .token.char,
-.token.builtin,
-.token.inserted {
+.token.builtin {
   color: color.scale($primary-color, $lightness: -50%);
+}
+
+.token.inserted {
+  color: #008000;
 }
 
 .token.operator,
