--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -9,6 +9,7 @@ title: andreas-mausch.de
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="{{ "/styles/style.css" | url }}"/>
+    <link rel="stylesheet" href="{{ "/styles/icons/iconism.css" | url }}"/>
     {% if extraStyles and "katex" in extraStyles %}
       <link rel="stylesheet" href="{{ "/styles/katex.css" | url }}"/>
     {% endif %}
