--- a/styles/_large.scss
+++ b/styles/_large.scss
@@ -55,3 +55,9 @@ body > .content {
 .swiffy-slider img {
   max-height: 500px;
 }
+
+.project .image,
+.experience .image,
+.education .image {
+  text-align: center;
+}
