--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,6 +3,7 @@
 @use "_code.scss";
 @use "_image-carousel.scss";
 @use "_image-comparison-slider.scss";
+@use "_resume.scss";
 @use "_table.scss";
 
 @include OpenSans.fontFace(
