--- a/styles/style.scss
+++ b/styles/style.scss
@@ -458,6 +458,10 @@ $site-nav-spacing: calc($site-nav-width / 4);
   blockquote {
     background-color: $background-color-light;
   }
+
+  .swiffy-slider.slider-indicators > *, .swiffy-slider .slider-indicators > * {
+    filter: invert(1);
+  }
 }
 
 @media only screen and (min-width: 641px) {
