--- a/styles/style.scss
+++ b/styles/style.scss
@@ -207,6 +207,7 @@ a {
 .postlist-item-thumbnail img {
   aspect-ratio: 16/10;
   object-fit: contain;
+  width: 100%;
 }
 
 .postlist-item-content {
