Add my OpenPGP key

--- a/index.njk
+++ b/index.njk
@@ -26,6 +26,10 @@ layout: page
       <i class="icon icon-xing"></i>
       <a href="https://www.xing.com/profile/Andreas_Mausch2" target="_blank">Xing</a>
     </span>
+    <span>
+      <i class="icon icon-key"></i>
+      <a href="openpgp.asc" title="6FB79D6D075A268571DE9E42C2C14B464D7B72E9">OpenPGP</a>
+    </span>
   </div>
 </div>
 <div class="how-i-work">
