deploy: 8649af2eaac5b09d53f525c311f7fcda04d51aa2

--- a/styles/icons/iconism.css
+++ b/styles/icons/iconism.css
@@ -22,6 +22,7 @@
 .icon-copy:before { content: "\f0c5" } 
 .icon-envelope-open-text:before { content: "\f658" } 
 .icon-github:before { content: "\f09b" } 
+.icon-key:before { content: "\f084" } 
 .icon-linkedin:before { content: "\f0e1" } 
 .icon-location-dot:before { content: "\f5a0" } 
 .icon-phone:before { content: "\f095" } 
